@@ -2,6 +2,8 @@ Revision history for Git-Background
 
 {{$NEXT}}
 
+  - run() throws an error if it is run in void context
+
 0.003  2022-01-01 22:55:58 UTC
 
   - Bump dependency on Future to 0.40, which introduced Future::Exception
